# headsail-vp

./: .gitignore  README.md
.github/workflows/: validate.yml
doc/: development.md
examples/: Cargo.toml
examples/c-bsp-test/: CMakeLists.txt  README.md  RISC-V-Toolchain.cmake  boot.h  find_linkx.sh  find_mem.sh  linker.lds  main.c
examples/headsail-bsp/: Cargo.toml  Justfile  README.md  build.rs  mem_hpc.x  sdram_hpc.x
examples/headsail-bsp-c/: Cargo.toml  Justfile  build.rs
examples/headsail-bsp-ffi/: Cargo.toml  Justfile  README.md  cbindgen.toml  weaken_compiler_builtins.sh
examples/headsail-bsp-ffi/src/: lib.rs
examples/headsail-bsp/.cargo/: config.toml
examples/headsail-bsp/examples/: alloc.rs  allocator.rs  interrupts.rs  panic.rs  sprintln.rs  timer0.rs  uart0-read.rs  uart0.rs  uart0_read.rs  uart0_read_irq.rs
examples/headsail-bsp/openocd/: hpc.cfg  sysctrl.cfg
examples/headsail-bsp/src/: apb_timer.rs  apb_uart.rs  lib.rs  mmap.rs  mmio.rs  sdram.rs  sprintln.rs  tb.rs  timer_unit.rs  uart.rs  ufmt_panic.rs
examples/headsail-bsp/src/alloc/: mod.rs
examples/headsail-bsp/src/allocator/: mod.rs
examples/headsail-bsp/src/hpc/: hart_id.rs  interrupt.rs  mod.rs
examples/headsail-bsp/src/sysctrl/: gpio.rs  interrupt.rs  mmap.rs  mod.rs  soc_ctrl.rs  udma.rs
examples/hello-dla/: Cargo.toml  memory.x  renode.sh
examples/hello-dla/.cargo/: config.toml
examples/hello-dla/examples/: dla.rs
examples/hello-dla/src/: lib.rs
examples/hello-hpc/: Cargo.toml  connect-and-load.gdb  renode.sh
examples/hello-hpc/examples/: uart0.rs
examples/hello-hpc/src/: lib.rs  main.rs
examples/hpc/: Cargo.toml
examples/hpc-c/cmake/: FindBsp.cmake  FindDlaDriver.cmake  FindNewlib.cmake  FindRiscvGcc.cmake
examples/hpc-c/crt0/: boot.h  linker.lds  linker_sdram.lds
examples/hpc-c/gridmap/: CMakeLists.txt  README.md  main.c  results.org
examples/hpc-c/hello-hpc/: CMakeLists.txt  Justfile  README.md  main.c
examples/hpc-c/hello-newlib/: CMakeLists.txt  Justfile  main.c
examples/hpc-c/hello-newlib-hpc/: CMakeLists.txt  Justfile  README.md  main.c
examples/hpc-c/scripts/: export_riscv.env
examples/hpc-c/test-bsp-ffi/: CMakeLists.txt  Justfile  README.md  main.c
examples/hpc-c/test-dla-driver-ffi/: CMakeLists.txt  Justfile  README.md  main.c
examples/hpc-c/tvm-arm/: CMakeLists.txt  README.md  build_module.py  config.cmake  generate_crt.py  linker.lds  tvm_integration.py
examples/hpc-c/tvm-arm/src/: adder.h  bundle_static.c  main.c  mobile_net.c
examples/hpc-c/tvm-hpc/: ARM_CMakeList.txt  Arm_CMakeLists.txt  CMakeLists.txt  README.md  build_module.py  config.cmake  generate_crt.py  get_testing_data.sh  ir_generate.py  requirements.txt  stimulus.c  stimulus.npy  tiny_perf_benchmark.py
examples/hpc-c/tvm-hpc/models/: model.onnx
examples/hpc-c/tvm-hpc/src/: adder.c  aot.c  bundle_aot.c  bundle_static.c  conv2dbasic.c  conv2dbasic.h  crt_config.h  main.c  mobile_net.c  mobile_net.h  model.h  perf_image_classification.c  perf_keyword_spotting.c  perf_visual_wakeup_word.c
examples/hpc-c/tvm-hpc/stimulus/: mobile_net_input.npy
examples/hpc/dla-driver/: Cargo.toml  connect-and-load.gdb
examples/hpc/dla-driver-ffi/: Cargo.toml  Justfile  build.rs
examples/hpc/dla-driver-ffi/src/: lib.rs
examples/hpc/dla-driver/.cargo/: config.toml
examples/hpc/dla-driver/examples/: decimal_values.txt  depthwise.rs  dla-support.rs  dla.rs  embedded_data.rs  highlevel.rs  mac_benchmark.rs  validate_conv.rs
examples/hpc/dla-driver/examples/test_data/: bias.mem  bias_test.out  conv_10x15x3_3x3_din.mem  conv_10x15x3_3x3_din.rs  conv_10x15x3_3x3_din_by_column.rs  conv_10x15x3_3x3_dout.mem  conv_10x15x3_3x3_dout.rs  conv_10x15x3_3x3_dout_by_column.rs  conv_10x15x3_3x3_wgt.mem  conv_10x15x3_3x3_wgt.rs  conv_10x15x3_3x3_wgt_by_column.rs  conv_16x16x16_3x3.rs  conv_16x16x16_3x3_din.rs  conv_16x16x16_3x3_din_by_column.rs  conv_16x16x16_3x3_dout.mem  conv_16x16x16_3x3_dout.rs  conv_16x16x16_3x3_dout_by_column.rs  conv_16x16x16_3x3_wgt.mem  conv_16x16x16_3x3_wgt.rs  conv_16x16x16_3x3_wgt_by_column.rs  din.mem  mod.rs  tiny_test_din.mem  tiny_test_dout.mem  tiny_test_wgt.mem
examples/hpc/dla-driver/src/: layers.rs  lib.rs  mmap.rs  tensor3.rs  tensor4.rs  utils.rs
examples/hpc/hello-dla/: Cargo.toml  Justfile  build.rs  connect-and-load.gdb  renode.sh
examples/hpc/hello-dla/.cargo/: config.toml
examples/hpc/hello-dla/examples/: apb_uart0.rs  dla.rs  panic.rs
examples/hpc/hello-dla/src/: lib.rs  mmap.rs
examples/hpc/hello-hpc/: Cargo.toml  renode.sh
examples/hpc/test-memory-maps/: Cargo.toml  Justfile  build.rs  devices.lines
examples/hpc/test-memory-maps/src/: main.rs
examples/hpc/tvm-hpc/: CMakeLists.txt  RISC-V-Toolchain.cmake  build_module.py  export_cc.sh  linker.lds
examples/hpc/tvm-hpc/src/: main.c
examples/sysctrl/: Cargo.toml
examples/sysctrl/hello-sysctrl/: Cargo.toml  Justfile  connect-and-load.gdb  memory.x  renode.sh
examples/sysctrl/hello-sysctrl/.cargo/: config.toml
examples/sysctrl/hello-sysctrl/examples/: apb_uart0.rs  apb_uart0_mmio.rs  both_uarts.rs  init_hpc.rs  led.rs  led_raw.rs  panic.rs  spim0.rs  timer0.rs  uart0.rs  udma_uart.rs  udma_uart_pac.rs
examples/sysctrl/hello-sysctrl/src/: lib.rs
scripts/: 0_mach_create.resc  1_hpc.resc  1_sysctrl.resc  2_run_sysctrl.resc  convert-memt-to-rust.py  run_on_hpc.sh  run_on_sysctrl.sh  setup_renode.sh  start_hpc.resc  tear_renode.sh  test_conv2d.py
scripts/resc/: 0_mach_create.resc  1_hpc.resc  1_sysctrl.resc  2_run_hpc.resc  uart_0_log
scripts/robot/: UartLibrary.py  dla_validate.robot  hello_dla.robot  help.robot  is_hello.robot  test_pass.robot
svd/: headsail-hpc-v0.1.1.svd
vp/2023-10-12-kactus2-generated/: Ibex_cpus.repl
vp/devel/: README.md  common.repl  cpus.repl  headsail.repl  hpc.repl  memory.repl  peripherals.repl  sysctrl.repl
vp/devel/external_modules/: dla_inter
vp/devel/python_peripherals/: DLA.py
vp/kactus2-generated-2023-10-12-ibex/: Ibex_peripherals.repl
vp/kactus2-generated:2023-10-12-ibex/: Ibex_memory.repl
(+7 files in other folders)
