[package]
name = "dla-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vp = []

[dependencies]
panic-halt = "0.2.0"
headsail-bsp = { version = "0.1.0", path = "../../headsail-bsp", features = [
    "hpc-rt",
    "alloc",
    "sdram",
] }


rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
