[package]
name = "dla-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vp = []
hpc = []

[dependencies]
panic-halt = "0.2.0"
headsail-bsp = { version = "0.1.0", path = "../../headsail-bsp", features = [
    "hpc-rt",
    "alloc",
    "sdram",
    "sprint-apb-uart0",
] }


rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
ndarray = { version = "0.15.6", default-features = false }

[[example]]
name = "mac_benchmark"
path = "examples/mac_benchmark.rs"

[[example]]
name = "validate"
path = "examples/validate_conv.rs"
