[package]
name = "test-memory-maps"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
bsp = { version = "0.1.0", path = "../../headsail-bsp", package = "headsail-bsp", features = [
    "hpc-rt",
    "vp",
    "sprint-apb-uart0",
] }

[build-dependencies]
fs-err = "2.11.0"
keelhaul = { git = "https://github.com/soc-hub-fi/keelhaul", version = "0.1.0", features = [
    "rustfmt",
] }
