[package]
name = "test-memory-maps"
version = "0.1.0"
edition = "2021"

[dependencies]
bsp = { version = "0.1.0", path = "../../headsail-bsp", package = "headsail-bsp", features = [
    "hpc-rt",
    "vp",
    "sprint-apb-uart0",
    "panic-apb-uart0",
] }

[build-dependencies]
fs-err = "3.0.0"
keelhaul = { git = "https://github.com/soc-hub-fi/keelhaul", version = "0.1.0", features = [
    "rustfmt",
] }
