[package]
name = "hello-sysctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
asic = ["headsail-bsp/asic"]

[dependencies]
headsail-bsp = { version = "0.1.0", path = "../../headsail-bsp", features = [
    "sysctrl-rt",
    "sysctrl-pac",
    "panic-apb-uart0",
] }
